Add styles for labels

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -26,6 +26,7 @@ input, button, textarea, select {
 body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #00414f;
+    font-size: 16px;
 }
 
 input{
@@ -60,6 +61,11 @@ form{
 }
 .asterisk{
     color: #e14949;
+}
+.label-name, .label-email, .label-date, .label-size{
+    display: block;
+    font-weight: 400;
+    font-size: 1.17rem;
 }
 
 .form_color-block > div{
