--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -55,7 +55,7 @@ main{
     flex-grow: 1;
 }
 form{
-    padding: 40px;
+    padding: 30px 40px 40px;
     border-radius: 10px;
     background-color: #f3f3f3;
 }
@@ -64,10 +64,26 @@ input, select{
     border-radius: 5px;
     border: 1px solid rgb(175, 175, 175);
 }
+select {
+    cursor: pointer;
+}
 input:focus, select:focus{
     border: 1.5px solid #03718a;
     outline: none;
    
+}
+button{
+    padding: 10px 20px;
+    border-radius: 5px;
+
+}
+.reset{
+    background-color: #2c4f57;
+    color: #fff;
+}
+.submit{
+    background-color: #0b90ad;
+    color: #fff;
 }
 
 .asterisk{
@@ -80,34 +96,41 @@ input:focus, select:focus{
     margin: 13px 0 3px;
 }
 .input-name, .input-email, select, .input-date{
-    width: 250px;
+    width: 100%;
+}
+.input-date{
+    cursor: pointer;
 }
 
 .form_color-block > div{
-    margin-bottom: 15px;
+    margin-bottom: 7px;
 }
 .label-color{
     margin-bottom: 15px;
 }
-.form_label-red, .form_label-blue, .form_label-green{ 
+.label-red, .label-blue, .label-green{ 
     display: inline-block;
-    width: 150px;   
+    width: 92%;   
     padding: 10px;
     margin-left: 10px;
     text-align: center;
     color: #ffffff;    
     border-radius: 5px;
+    cursor: pointer;
 }
-.form_label-red {    
+.label-red {    
     background-color: #e14949;    
 }
 
-.form_label-blue { 
+.label-blue { 
     background-color: #098b05;    
 }
 
-.form_label-green {    
+.label-green {    
     background-color: #001bb3;    
+}
+.form_date-block{
+    margin-bottom: 25px;
 }
 
 footer{
