--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -50,6 +50,7 @@ body{
 }
 header{
     flex-grow: 0.5;
+    margin-top: 40px;
 }
 main{
     flex-grow: 1;
@@ -74,6 +75,19 @@ input:focus, select:focus{
     border: 1.5px solid #03718a;
     outline: none;
    
+}
+
+h1{
+    text-align: center;
+}
+h1, h2{
+    color: #fff;
+}
+h2{
+    margin: 20px auto 0;
+    width: 70%;
+    text-align: center;
+    color: #cccccc;
 }
 
 button{
@@ -110,6 +124,7 @@ button{
     font-weight: 400;
     font-size: 1.17rem;
     margin: 13px 0 3px;
+    color: #3b3939;
 }
 .input-name, .input-email, select, .input-date{
     width: 100%;
@@ -175,3 +190,19 @@ footer{
     color: #fff;
 }
 
+@media (max-width: 665px){
+    form{
+        border-radius: 0;
+    }
+
+}
+@media (max-width: 425px){
+    .label-red, .label-blue, .label-green{
+        width: 87%;
+    }
+    h2 {
+        margin: 20px auto 20px;
+        width: 80%;
+        font-size: 1.3rem;
+    }
+}
