--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -99,7 +99,7 @@ button{
     cursor: pointer;
 }
 .reset{
-    background-color: #4d6a70;
+    background-color: #00414f;
     color: #fff;
     margin-right: 1%;
     transition: background-color 0.5s;
@@ -108,7 +108,7 @@ button{
     background-color: #304246;
 }
 .submit{
-    background-color: #0b90ad;
+    background-color: #096b81;
     color: #fff;
     transition: background-color 0.5s;
 }
@@ -148,9 +148,10 @@ button{
     color: #ffffff;    
     border-radius: 5px;
     cursor: pointer;
+    font-weight: 600;
 }
 .label-red {    
-    background-color: #e14949;  
+    background-color: #bb2323;  
     transition: background-color 0.5s;  
 }
 .label-red:hover {    
@@ -158,7 +159,7 @@ button{
 }
 
 .label-blue { 
-    background-color: #0a20a1;   
+    background-color: #05156e;   
     transition: background-color 0.5s;   
 }
 .label-blue:hover { 
@@ -166,7 +167,7 @@ button{
 }
 
 .label-green {    
-    background-color: rgb(14, 143, 14);   
+    background-color: rgb(10, 107, 10);   
     transition: background-color 0.5s;   
 }
 .label-green:hover {    
@@ -182,12 +183,13 @@ footer{
     text-align: center;
 }
 .copyright_link{
-    color: #eccccc;
+    color: #fff;
+    font-weight: 600;
     text-decoration: none;
     transition: color 0.5s;
 }
 .copyright_link:hover{
-    color: #fff;
+    color: #c2c0c0;
 }
 
 @media (max-width: 665px){
