CODE BEFORE -Lighthouse Accessibility

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -34,28 +34,28 @@ body{
 
 .menu {
  display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #edeae8;
- padding: 30px 70px;
- margin-bottom: 50px;
+ justify-content: center;
+ align-items: center;
+ background-color: #edeae8;
+ padding: 30px 50px;
+ margin-bottom: 30px;
+ margin-top: 10px;
 }
 
 header{
     justify-content: center;
     text-align:  center;
-    margin-bottom: 20px;
-    margin-top: 90px;
+    margin-bottom: 10px;
+    background-color: rgb(248, 245, 245);  
 }
 
 h1{
+    padding-top: 40px;
+    margin-top: 40px;
     font-family: "Inter", sans-serif;
     font-size: 50px;
     align-items: center;
     color: rgb(0, 0, 0);
-}
-.log-user{
-    padding: 50px 80px;
 }
 
 h2{
@@ -64,8 +64,14 @@ h2{
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
-    margin-bottom: 70px;
+    margin: 20px 40px ;
 }
+.log-user{
+        font-family: "Inter", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+      } 
 
 ul {
     display: flex;
@@ -73,9 +79,31 @@ ul {
 }
 
 ul li {
+    display: flex;
     list-style-type: none;
+    margin: 10px 120px;
+    align-items: center;
 }
 
+.logo {
+    display: flex;
+    height: 100px;
+    width: auto;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50PX;
+}
+
+.log-user input {
+    border: none;
+    border-bottom: 2px solid black;
+    outline: none;
+    width: 200px;
+    height: 30px;
+    background: none;
+    text-align: center;
+}
 .menu-itens a {
     color: black;
     font-family: "Azeret Mono", monospace;
@@ -86,20 +114,21 @@ ul li {
 }
 .product-card {
     display: flex;
+    justify-content: center;
     flex-direction: row;
     align-items: center;
     margin: 30px 30px;
-    padding: 20px 20px;
+    padding: 50px 20px;
     height:500px;
     width:auto;
 }
 .product-name{
     font-family: "Azeret Mono", monospace;
     font-optical-sizing: auto;
-     font-weight: 200;
+     font-weight: 250;
     font-style: normal;
     font-size: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
  }
 
 
@@ -108,35 +137,37 @@ ul li {
     font-size: 20px;
     font-optical-sizing: auto;
     font-weight: 500;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
    
 }
 
 .product-img{
-    display: flex;
     height: 400px;
     width: auto;
-    margin: 40px;
+    margin: 50px;
+    align-items: center;
 }
 
 .image-jumpers{
+    display: inline-block;
     height:90px;
     width: auto;
+    margin-bottom: 10px;
+}
+
+.btn{
+    display: inline-block; 
+    padding: 10px 20px;
+    background-color: rgb(0, 0, 0);
+    color: aliceblue;
+    border: none;
+    cursor: pointer;
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
-.sizes-btn{
-    background-color: rgb(191, 52, 52);
-    color: rgb(8, 8, 8);
-    border: 20px;
-    text-align: center;
-    padding: 30px 30px;
-   justify-content: space-around;
-   margin-bottom: 20px;
-
-}
 .info-delivery{
-    padding-top: 40px;
+    padding-top: 70px;
     font-size: 20px;
     margin-bottom: 20px;
 }
@@ -144,38 +175,28 @@ ul li {
 .date{
     font-size: 30px;
     color: rgb(0, 0, 0);
-    padding-bottom: 50px;
+    padding-bottom: 3   0px;
 }
 
 .calendar{
     margin-top: 10px;
-  
-}
-
-.add-bag{
-    padding: 10px 10px;
-    background-color: black;
-    color: aliceblue;
-    margin-top: 20px;
-     border: none;
-}
-
-.calendar{
     height: 40px;
 }
 
 
 footer{
+    display: flex;
+    justify-content: center;
     background-color: rgb(5, 5, 5);
     height: 75px;
     color: rgb(255, 255, 255);
     font-family: "Azeret Mono", monospace;
     font-optical-sizing: auto;
     font-weight: 200;
-     font-style: normal;
-     padding: 90px 50px;
-     text-align: start;
-     text-indent: 40px;
+    font-style: normal;
+    padding: 90px 50px;
+    text-align: start;
+    text-indent: 40px;
 }
 
 
