--- a/Wireframe/css/styles.css
+++ b/Wireframe/css/styles.css
@@ -49,9 +49,17 @@ body {
     padding-bottom: 3%
 }
 
+a {
+    background-color: black;
+    color: white;
+    padding: 1em 1.5em;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
 a:link,
 a:visited {
-    color: blue;
+    color: white;
     text-decoration: none;
 
 }
