--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -11,7 +11,10 @@ body {
   min-height: 100vh;
   margin: 0;
 }
-
+main {
+  flex: 1;
+  padding-bottom: 40px; 
+}
 /* Header Styling */
 header {
   background-color: #333;
@@ -165,8 +168,3 @@ footer {
   margin-bottom: 15px;
 }
 
-/* Main content area */
-main {
-  flex: 1;
-  padding-bottom: 40px; /* Space between the last card and the footer */
-}
