make footer fixed at the bottom of the page

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -54,5 +54,6 @@ footer {
     background-color: #f4f4f4;
     text-align: center;
     padding: 10px;
-    position: relative;
+    width: 100%;
+    position: fixed;
 }
