--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -20,4 +20,12 @@ button {
     line-height: 1.2;
 }
 
-form {}
+form {
+    width: 30em;
+    max-width: 90%;
+    margin: 2rem auto;  
+    background-color: #000000; 
+    padding: 2rem;  
+    border-radius: 8px;  
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);  
+}
