--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -17,6 +17,7 @@ h2{
 
 header{
     text-align: center;
+    width: 100%;
     color: #c8b8db;
     padding: 5rem 1rem;
     background-color: #73628a;
@@ -26,7 +27,7 @@ header{
 img{
     width: 90%;
     max-width: 100%;
-    
+    margin: 0px 5%;
     border-radius: 80px;
 }
 
@@ -38,22 +39,22 @@ section{
 }
 
 article{
-    text-align:center;
+    text-align:justify;
     padding: 0.8rem 1rem;
-    margin: 0.8rem 2rem;
+    margin: 1rem;
     border: 0.2rem solid #73628a;
     border-radius: 4rem;  
 }
+
+.art1 > * + h2{
+    font-size:2.3rem;
+}
+
 .art2,
 .art3{
     width: 50%;
+    margin-bottom: 6rem;
 }
-
-/*
-article:first-child{
-    width: 100%;
-}
-*/
 
 button{
     background-color: #cbc5ea;
@@ -68,10 +69,13 @@ button:hover{
 }
 
 footer{
+    width: 100%;
+    position: fixed;
+    bottom: 0;
     text-align: center;
     background-color: #73628a;
     padding: 1rem;
-    margin-top: 1rem;
+    
 }
 
 @media (max-width: 600px) {
