--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,7 +1,8 @@
 body {
     width: 100%;
     padding: 1em 1em 2em 3em;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;       
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    background-color: aqua;     
 }
 
 .form_container {
