adjusted the gap between articles and footer

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -27,6 +27,7 @@ header {
 main {
     padding: 1rem;
     display: block;
+    margin-bottom: 2rem;
 }
 
 h1 {
@@ -67,13 +68,13 @@ h1 {
 
 .wrapper {    
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
     flex-wrap: wrap;
 }
 
 .article-wrapper {
     flex: 1 1 40%;      /*this help to have space for div to move */
-    gap: 1.5rem;
+    gap: 2rem;
     border: 3px solid rgb(3, 242, 218);
     box-shadow: 0 2px 10px;
 
