--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -3,10 +3,29 @@ body {
   background-color: #f4f4f4;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  background-color: #001cff;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+}
+
+.form-title {
+  font-size: 24px;
+  margin: 0;
+}
+
+main {
+  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  padding: 20px;
 }
 
 .form-container {
@@ -16,13 +35,6 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 400px;
   width: 100%;
-}
-
-.form-title {
-  font-size: 24px;
-  margin-bottom: 20px;
-  color: #333;
-  text-align: center;
 }
 
 .order-form {
@@ -77,7 +89,19 @@ body {
   background-color: #0056b3;
 }
 
-/* Styling for date input */
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+}
+
+footer img {
+  max-width: 50px;
+  height: auto;
+}
+
+/* Specific styling for date input */
 #delivery-date {
   padding: 10px;
   font-size: 16px;
