--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -10,3 +10,12 @@
     color: #333; 
     padding: 20px;
   }
+
+  header {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  header h1 {
+    color: #333;
+  }
