--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -73,3 +73,13 @@
   button:hover {
     background-color: black;
   }
+
+  footer {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  footer h2 {
+    font-size: 14px;
+    color: #555;
+  }
