--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -1,4 +1,81 @@
 body
 {
 background-image:url("./image/bg_pic.jpg") ;
+background-repeat: no-repeat;
+background-size: cover;
+text-align: center;
+align-items: center;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
+h1{
+    border-radius: 2rem;
+    border-bottom: #e0dada solid 1.5rem;
+    color: rgb(247, 245, 243);
+    font-size: 3.5rem;
+    font-weight: bold;
+}
+
+main{
+    display: flex;
+    flex-direction: row;
+    height: 32rem;
+    border:4rem solid #0f4383; 
+    border-radius: 1rem;      
+    background-color: #e0dada;  
+    background: linear-gradient(45deg, #1a297e, #5b2092, #140fa0, #3a8860); 
+    box-shadow: 0 0.4rem 3rem rgb(253, 250, 250);
+    transition: border-color 0.3s ease, transform 0.3s ease; 
+    justify-content: center;   
+    align-items: center;  
+    text-align: center; 
+    cursor: pointer;   
+    line-height: 1.5rem;    
+    
+}
+main:hover{
+    border-color: #0f4383;
+    transform: scale(1);
+}
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+label {
+    margin: 0.5rem 0 0.5rem;      
+    font-size:1.5rem;              
+    color: #faf5f5;  
+}
+input[type="text"],
+        input[type="email"],
+        input[type="date"],
+        select {
+            padding: 10px;            
+            border: 2px solid #3f8498;   
+            border-radius: 5px;         
+            font-size: 16px;         
+            width: 100%;                 
+            box-sizing: border-box;       
+        }
+button{
+    background: linear-gradient(45deg, #962b81, #4b4de1, #dbdde0, #3429d3);
+    background-size: 300%;
+    color: white;
+    border: none;
+    margin-top:1rem;
+    padding:0.5rem;
+    font-size: 2rem;
+    border-radius:0.6rem;
+    cursor: pointer;
+    box-shadow: 0 0.4rem 10rem rgba(38, 47, 231, 0.977);
+    transition: background-position 0.5s ease;
+}
+button:hover{
+    background: linear-gradient(45deg, #112ca6, #951178, #116683, #a08f55);
+    
+}
+footer{
+    color: white;
+    font-weight: bold;
 }
