--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -51,8 +51,8 @@ input[type="text"],
 input[type="email"],
 input[type="date"],
 select {
-   padding: 10px;            
-   border: 2px solid #3f8498;   
+   padding: 0.6rem;            
+   border: 0.2rem solid #3f8498;   
    border-radius: 0.5rem;         
    font-size: 1rem;         
    width: 100%;                 
