first child pseudo class fixed and css link fixed

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -29,7 +29,8 @@ article {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
-.articles article:first-child {
+
+article:first-child {
     background-color: #ffeb3b;
 }
 
