--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -15,13 +15,13 @@
     padding: 20px;
   }
   
-.articles {
+  .articles {
     display: flex;
     flex-direction: column;
     gap: 20px;
   }
   
-  .first-article {
+  .articles > article:first-child {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -30,11 +30,12 @@
     align-items: flex-start;
   }
   
-  .first-article img {
+  .articles > article:first-child img {
     width: 600px;
     height: auto;
     border-radius: 5px;
     margin-bottom: 15px;
+    align-self: center;
   }
   
   .article-grid {
@@ -42,4 +43,22 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     margin-bottom: 50px;
+  }
+  
+  article {
+    background-color: #dee2e6;
+    padding: 20px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 50px;
+  }
+  
+  article img {
+    width: 350px;
+    height: 200px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    align-self: center;
   }
